--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 	path = lib/lvgl
 	url = https://github.com/qmk/lvgl.git
 	branch = release/v8.2
+[submodule "keyboards/gmmk/pro/rev1/ansi/keymaps/timepants/qmk-vim"]
+	path = keyboards/gmmk/pro/rev1/ansi/keymaps/timepants/qmk-vim
+	url = https://github.com/andrewjrae/qmk-vim.git
